Styles alignment fix
- When a team is cotained with more players their names shoudld be aligned to left

--- a/src/jquery.bracket.less
+++ b/src/jquery.bracket.less
@@ -251,6 +251,7 @@ div.jQBracket {
       .name {
         margin-right: 5px;
         float: left;
+        text-align: left;
 
         a {
           color: inherit;
